--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -3,5 +3,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: aliceblue;
+    background-color: #faf9ff;
 }
