--- a/blocks/header/__background/header__background.css
+++ b/blocks/header/__background/header__background.css
@@ -9,6 +9,7 @@
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;  
+    margin-bottom: 70px;
 }
 
 @media(max-width: 1200px){
