--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,4 +3,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;     
+    border-bottom: 1px solid rgb(207, 207, 207);
+    padding-bottom: 20px;
 }
