--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,3 +4,52 @@
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(153, 153, 153);
 }
+
+@media(max-width: 1700px){
+    .footer{
+        width: 55%;
+    }
+}
+
+@media(max-width: 1550px){
+    .footer{
+        width: 60%;
+    }
+}
+
+@media(max-width: 1550px){
+    .footer{
+        width: 65%;
+    }
+}
+
+@media(max-width: 1300px){
+    .footer{
+        width: 70%;
+    }
+}
+
+@media(max-width: 1220px){
+    .footer{
+        width: 75%;
+    }
+}
+
+@media(max-width: 1030px){
+    .footer{
+        width: 90%;
+    }
+}
+
+/*@media(max-width: 930px){
+    .footer{
+        flex-direction: column;
+        align-items: center;
+        }
+}*/
+
+@media(max-width: 460px){
+    .footer{
+        width: 98%;
+    }
+}
