--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,19 @@
 .footer__copyright{
     text-align: center;
     margin: 40px 0 20px;
-    font-size: 17px;
+    
     line-height: 1.15;
+}
+
+@media(max-width: 1030px){
+    .footer__copyright{
+        margin-top: 20px;
+    }
+}
+
+@media(max-width: 460px){
+    .footer__copyright{
+        font-size: 12px;
+        margin-top: 10px;
+    }
 }
