--- a/blocks/header/__background/_subtitle/header__background_subtitle.css
+++ b/blocks/header/__background/_subtitle/header__background_subtitle.css
@@ -5,7 +5,7 @@
     font-size: 40px;
 }
 
-@media(max-width: 1200px){
+@media(max-width: 1220px){
     .header__background_subtitle{
         font-size: 30px;
     }
@@ -20,5 +20,11 @@
 @media(max-width: 670px){
     .header__background_subtitle{
         font-size: 20px;
+    }
+}
+
+@media(max-width: 530px){
+    .header__background_subtitle{
+        font-size: 17px;
     }
 }
