--- a/blocks/header/__background/_title/header__background_title.css
+++ b/blocks/header/__background/_title/header__background_title.css
@@ -5,7 +5,7 @@
     font-size: 90px;
 }
 
-@media(max-width: 1200px){
+@media(max-width: 1220px){
     .header__background_title{
         font-size: 70px;
     }
@@ -20,5 +20,17 @@
 @media(max-width: 670px){
     .header__background_title{
         font-size: 45px;
+    }
+}
+
+@media(max-width: 530px){
+    .header__background_title{
+        font-size: 40px;
+    }
+}
+
+@media(max-width: 460px){
+    .header__background_title{
+        font-size: 32px;
     }
 }
