--- a/blocks/header/__navigation/_logo/header__navigation_logo.css
+++ b/blocks/header/__navigation/_logo/header__navigation_logo.css
@@ -1,3 +1,29 @@
 .header__navigation_logo{
+    width: 300px;
+    height: 100px;
+    background-image: url("../../../../Src/logo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
+@media(max-width: 1220px){
+    .header__navigation_logo{
+        width: 250px;
+        height: 83.3px;
+        }
+}
+
+@media(max-width: 930px){
+    .header__navigation_logo{
+        margin-bottom: 20px
+        }
+}
+
+@media(max-width: 530px){
+    .header__navigation_logo{
+        width: 200px;
+        height: 66.7px;
+        margin-bottom: 15px
+    }
 }
