--- a/blocks/header/__navigation/header__navigation.css
+++ b/blocks/header/__navigation/header__navigation.css
@@ -4,3 +4,52 @@
     justify-content: space-between;
     align-items: flex-end;
 }
+
+@media(max-width: 1700px){
+    .header__navigation{
+        width: 55%;
+    }
+}
+
+@media(max-width: 1550px){
+    .header__navigation{
+        width: 60%;
+    }
+}
+
+@media(max-width: 1550px){
+    .header__navigation{
+        width: 65%;
+    }
+}
+
+@media(max-width: 1300px){
+    .header__navigation{
+        width: 70%;
+    }
+}
+
+@media(max-width: 1220px){
+    .header__navigation{
+        width: 75%;
+    }
+}
+
+@media(max-width: 1030px){
+    .header__navigation{
+        width: 90%;
+    }
+}
+
+@media(max-width: 930px){
+    .header__navigation{
+        flex-direction: column;
+        align-items: center;
+        }
+}
+
+@media(max-width: 460px){
+    .header__navigation{
+        width: 98%;
+    }
+}
