--- a/pages/contacts.css
+++ b/pages/contacts.css
@@ -9,51 +9,24 @@
 @import url(../blocks/header/__navigation/_links/header__navigation_links.css);
 @import url(../blocks/header/__navigation/_link/header__navigation_link.css);
 @import url(../blocks/main/main.css);
+@import url(../blocks/contacts/contacts.css);
+@import url(../blocks/contacts/__title/contacts__title.css);
+@import url(../blocks/contacts/__text/contacts__text.css);
+@import url(../blocks/contacts/__link/contacts__link.css);
+@import url(../blocks/contacts/__map/contacts__map.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__contacts/footer__contacts.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
-.contacts{
-    margin-top: 50px;
-}
 
-.contacts__title{
-    text-align: center;
-    margin: 0 0 40px;
-}
 
-.contacts__text{
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
-    text-align: center;
-    line-height: 1.2;
-}
 
-.contacts__link{
-    margin:0;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: rgb(153, 153, 153);
-    font-size: 22px;
-    line-height: 1.2;
-    font-weight: normal;
-    transition: opacity 0.3s ease-in;
-}
 
-.contacts__link:hover{
-    opacity: 0.8;
-    text-decoration: underline;
-}
 
-.contacts__map{
-    margin-top: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    
-}
+
+
+
+
 
 
 
