--- a/blocks/docs/docs.css
+++ b/blocks/docs/docs.css
@@ -1,48 +1,62 @@
-.footer{
-    margin: 30px 0 0;
+.docs{
     width: 50%;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(153, 153, 153);
+    margin: 30px auto 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px; 
+    justify-items: center;
 }
 
 @media(max-width: 1700px){
-    .footer{
+    .docs{
         width: 55%;
     }
 }
 
 @media(max-width: 1550px){
-    .footer{
+    .docs{
         width: 60%;
     }
 }
 
 @media(max-width: 1550px){
-    .footer{
+    .docs{
         width: 65%;
     }
 }
 
 @media(max-width: 1300px){
-    .footer{
+    .docs{
         width: 70%;
     }
 }
 
 @media(max-width: 1220px){
-    .footer{
+    .docs{
         width: 75%;
     }
 }
 
 @media(max-width: 1030px){
-    .footer{
+    .docs{
         width: 90%;
     }
 }
 
+@media(max-width: 930px){
+    .docs{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 570px){
+    .docs{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
 @media(max-width: 460px){
-    .footer{
+    .docs{
         width: 98%;
     }
 }
