--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -1,4 +1,7 @@
 .main{
+ /*   display: flex;
+    flex-direction: column;
+    align-items: center;*/
     width: 100%;
     padding-bottom: 30px;
     border-bottom: 1px solid rgb(207, 207, 207);
